--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,20 +1,16 @@
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1201px) {}
+/* X-Small devices (portrait phones, less than 576px) */
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200px) {}
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {}
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 991px) {}
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {}
 
-/* Small devices (landscape phones,large phones and portrait tablets 600px and up) */
-@media only screen and (min-width: 576px) and (max-width: 767px) {}
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
 
-/* Extra small devices (phones, 576px and down) */
-@media only screen and (max-width: 575px) {}
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
 
-
-
-
-
-
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {}
