--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  font-family:'Merriweather',serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+.container {
+  max-width: 1000px;
+  margin:  100px auto;
+  text-align: center;
+  padding: 100px;
+  background: #E9ECEF;
+  border-radius: 10px;
+}
+
+.container h1{
+  color: green;
 }
